--- a/advanced-ray/00-Overview-Advanced-Ray.ipynb
+++ b/advanced-ray/00-Overview-Advanced-Ray.ipynb
@@ -29,7 +29,7 @@
     "| :- | :-------------------------------------------------------- | :---------------------------------------- |\n",
     "| 00 | [Overview](00-Overview-Advanced-Ray.ipynb)   | A _table of contents_ for this tutorial.  |\n",
     "| 01 | [Ray Tasks Revisited](01-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, and task profiling techniques. |\n",
-    "| 02 | [Ray Actors Revisited](02-Ray-Actors-Revisited.ipynb) | A more in-depth look at actor characteristis and profiling actor performance using the _Ray Dashboard_. |\n",
+    "| 02 | [Ray Actors Revisited](02-Ray-Actors-Revisited.ipynb) | A more in-depth look at actor characteristics and profiling actor performance using the _Ray Dashboard_. |\n",
     "| 03 | [Ray Internals](03-Ray-Internals.ipynb) | Explores the architecture of Ray, task scheduling, the Object Store, etc. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Advanced-Ray-Solutions.ipynb)."
