--- a/advanced-ray/01-Ray-Tasks-Revisited.ipynb
+++ b/advanced-ray/01-Ray-Tasks-Revisited.ipynb
@@ -1408,11 +1408,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next lesson, [Ray Actors Revisited](02-Ray-Actors-Revisited.ipynb), revisits actors. It provides a more in-depth look at actor characteristics and profiling actor performance using the _Ray Dashboard_."
    ]
   }
  ],
