--- a/advanced-ray/02-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Actors-Revisited.ipynb
@@ -580,6 +580,13 @@
    "source": [
     "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next lesson, [Ray Internals](03-Ray-Internals.ipynb), explores the architecture of Ray, task scheduling, the Object Store, etc."
+   ]
   }
  ],
  "metadata": {
