--- a/ray-crash-course/02-Ray-Actors.ipynb
+++ b/ray-crash-course/02-Ray-Actors.ipynb
@@ -3339,6 +3339,13 @@
    "source": [
     "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next lesson, [Why Ray?](03-Why-Ray.ipynb), takes a step back and explores the origin and motivations for Ray, and Ray's growing ecosystem of libraries and tools."
+   ]
   }
  ],
  "metadata": {
