--- a/ray-crash-course/03-Why-Ray.ipynb
+++ b/ray-crash-course/03-Why-Ray.ipynb
@@ -135,11 +135,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The next lesson, [Ray Multiprocessing](04-Ray-Multiprocessing.ipynb), discusses Ray's drop-in replacements for common parallelism APIs,[`multiprocessing.Pool`](https://docs.python.org/3/library/multiprocessing.html#module-multiprocessing.pool)  and [`joblib`](https://joblib.readthedocs.io/en/latest/), and Ray's integration with `asyncio`. "
+   ]
   }
  ],
  "metadata": {
