--- a/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
+++ b/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
@@ -665,6 +665,13 @@
    "source": [
     "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next lesson, [Exploring Ray API Calls](06-Exploring-Ray-API-Calls.ipynb) explores the other Ray API calls for more advanced scenarios, including keyword arguments you can pass to the API calls already learned are explored."
+   ]
   }
  ],
  "metadata": {
