Typos, Added logo and copyright to solutions notebooks.

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "![Anyscale Academy](images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
+    "[Video introduction 🎥](https://youtu.be/Zy_AuL7xLpk)  &nbsp; (Look for these throughout the notebooks.)\n",
+    "\n",
     "Welcome to the [Anyscale Academy](https://anyscale.com/academy) training on [Ray](https://ray.io) and its ecosystem, the system for scaling your applications from a laptop to a cluster.\n",
     "\n",
     "This notebook provides an overview of the training available. If you downloaded these materials from the GitHub repo, see the instructions in the [README](./README.md) to set up the required version of Python and the libraries you need."
@@ -143,7 +145,6 @@
     "| 01 | [Ray Tasks Revisited](advanced-ray/01-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, and task profiling techniques. |\n",
     "| 02 | [Ray Actors Revisited](advanced-ray/02-Ray-Actors-Revisited.ipynb) | A more in-depth look at actor characteristics and profiling actor performance using the _Ray Dashboard_. |\n",
     "| 03 | [Ray Internals](advanced-ray/03-Ray-Internals.ipynb) | Explores the architecture of Ray, task scheduling, the Object Store, etc. |\n",
-    "| 04 | [Exploring Ray API Calls](advanced-ray/04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Advanced-Ray-Solutions.ipynb)."
    ]
