--- a/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
+++ b/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced Ray Tutorial - Exercise Solutions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Advanced Ray Tutorial - Exercise Solutions\n",
+    "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "First, import everything we'll need and start Ray:"
    ]
   },
