--- a/rllib/solutions/Ray-RLlib-Solutions.ipynb
+++ b/rllib/solutions/Ray-RLlib-Solutions.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib Tutorial - Exercise Solutions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Ray RLlib Tutorial - Exercise Solutions\n",
+    "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "This notebook contains the solutions for all the exercises in the RLlib tutorial.\n",
     "\n",
     "First, we have to setup everything needed from the other notebooks."
