--- a/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
+++ b/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Ray Crash Course - Exercise Solutions\n",
     "\n",
+    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "\n",
     "This notebook discusses solutions for the exercises in the _crash course_."
    ]
   },
