--- a/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
+++ b/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
+    "[Video introduction 🎥](https://youtu.be/UAUs8ATEjOo)\n",
+    "\n",
     "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), provides a \"just the facts\" introduction to [Ray](https://ray.io), the system for scaling your applications from a laptop to a cluster. Here, we start with a hands on exploration of the core Ray API for distributed work loads:\n",
     "\n",
     "* Ray _tasks_: Distributed execution of _stateless_ Python functions.\n",
