More emphatic warning...

--- a/ray-crash-course/04-Ray-Multiprocessing.ipynb
+++ b/ray-crash-course/04-Ray-Multiprocessing.ipynb
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note:** The next cell will take a while!"
+    "> **WARNING:** The next cell will take a VERY LONG TIME TO RUN!"
    ]
   },
   {
