Improved the wording about "sudo" profiling issue.

--- a/advanced-ray/02-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Actors-Revisited.ipynb
@@ -424,9 +424,11 @@
     "\n",
     "The Ray Dashboard provides an easy way to profile execution of Ray actors, producing [flame graphs](http://www.brendangregg.com/flamegraphs.html), which show performance characteristics of the application. This feature uses [py-spy](https://github.com/benfred/py-spy) to instrument and profile the application.\n",
     "\n",
-    "> **WARNING:** Py-spy may require `sudo` access. When you follow the instructions we are about to give, you may see an message that `sudo` is required, but there's no way to enter the password in the Dashboard. \n",
+    "> **WARNING:** Py-spy requires `sudo` access. When you follow the instructions we are about to give, you may see a message that `sudo` is required, but there's no way to enter the password in the Dashboard. \n",
     "\n",
-    "We discuss workarounds for the `sudo` issue in [Troubleshooting, Tips, and Tricks](reference/Troubleshooting-Tips-Tricks.ipynb#Profiling-Actors), but this technique may not work for many of you, due to the _sudo_ requirement. Note that a workaround is to run the application you want to profile outside a notebook, using a command line. Then if the Dashboard needs a password, you will be prompted at the terminal. \n",
+    "You won't see this issue if you are using the Anyscale platform for this tutorial; `sudo` access is already setup as needed.\n",
+    "\n",
+    "If you are working on your laptop, we discuss fixes and workarounds for the `sudo` issue in [Troubleshooting, Tips, and Tricks](reference/Troubleshooting-Tips-Tricks.ipynb#Profiling-Actors). For example, one workaround is to run the application you want to profile outside a notebook, using a command line. Then if the Dashboard needs a password, you will be prompted at the terminal. \n",
     "\n",
     "In any case, we'll describe the process of profiling here and provide a demonstration video and at live tutorial events."
    ]
