More troubleshooting tips

--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -77,11 +77,51 @@
     "$ kill 36029 36039\n",
     "```\n",
     "\n",
-    "Then try again.\n",
-    "\n",
-    "### Annoyances\n",
+    "Then try again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MacOS Annoyances\n",
     "\n",
     "If `ray.init()` worked (for example, you see a message like _View the Ray dashboard at localhost:8265_) and you're using a Mac, you may get several annoying dialogs asking you if you want to allow incoming connections for `python` and/or `redis-server`. Click \"Accept\" for each one and they shouldn't appear again during this lesson. MacOS is trying to verify if these executables have been properly signed. Ray uses Redis. If you installed Python using Anaconda or other mechanism, then it probably isn't properly signed from the point of view of MacOS. To permanently fix this problem, [see this StackExchange post](https://apple.stackexchange.com/questions/3271/how-to-get-rid-of-firewall-accept-incoming-connections-dialog)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \"File has changed on disk\"\n",
+    "\n",
+    "On rare occasions, you'll get a warning that the notebook file you are viewing has change on disk. Usually, you'll just want to keep the file you're viewing in Jupyter, especially if you have already made changes, but reloading it is fine, too."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \"AssertionError\" While Graphs Are Being Drawn \n",
+    "\n",
+    "We've observed a few occasions when errors like the following are written in the notebook outputs (very long numbers truncated):\n",
+    "\n",
+    "```\n",
+    "WARNING:param.dynamic_operation: Callable raised \"AssertionError('New option id 43948... does not match any option trees in Store.custom_options.',)\".\n",
+    "\n",
+    "AssertionError: New option id 11997... does not match any option trees in Store.custom_options.\n",
+    "```\n",
+    "\n",
+    "They are related to the graphing libraries we use and appear to be harmless."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving Resources by Ending Sessions You No Longer Need\n",
+    "\n",
+    "When doing lessons on a machine or cloud instance with low resources, close notebooks you no longer need and stop their kernels. Do the latter by clicking the left-hand icon with a white square inside a black circle. The tool tip says _Running Terminals and Kernels_. Click _SHUT DOWN_ for any notebooks you no longer need."
    ]
   },
   {
