renamed rllib to ray-rllib

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -165,15 +165,15 @@
     "\n",
     "| #   | Lesson (Notebook)                                         | Description                               |\n",
     "| :-  | :-------------------------------------------------------- | :---------------------------------------- |\n",
-    "| 00  | [Ray RLlib Overview](rllib/00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial. |\n",
-    "| 01  | [Introduction to Reinforcement Learning](rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning,  by @edoakes. You can skim or skip this lesson if you already understand RL concepts. |\n",
-    "| 02  | [About RLlib](rllib/02-About-RLlib.ipynb) | An introduction to RLlib, its goals and the capabilities it provides. |\n",
-    "| 03  | [Application: Cart Pole](rllib/03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
-    "| 04a | [Application: Mountain Car](rllib/04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
-    "| 04b | [Application: Taxi](rllib/04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
-    "| 04c | [Application: Frozen Lake](rllib/04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
+    "| 00  | [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial. |\n",
+    "| 01  | [Introduction to Reinforcement Learning](ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning,  by @edoakes. You can skim or skip this lesson if you already understand RL concepts. |\n",
+    "| 02  | [About RLlib](ray-rllib/02-About-RLlib.ipynb) | An introduction to RLlib, its goals and the capabilities it provides. |\n",
+    "| 03  | [Application: Cart Pole](ray-rllib/03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
+    "| 04a | [Application: Mountain Car](ray-rllib/04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
+    "| 04b | [Application: Taxi](ray-rllib/04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
+    "| 04c | [Application: Frozen Lake](ray-rllib/04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
+    "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
     "\n",
     "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
    ]
