--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -62,7 +62,9 @@
     "\n",
     "![RL Concepts](../images/rllib/RL-concepts.png)\n",
     "\n",
-    "In RL, an **agent** interacts with an **environment** to maximize a **reward**. The agent makes **observations** about the **state** of the environment and takes **actions** that it believes will maximize the long-term reward. However, at the moment, it can only observe the immediate reward and it remembers past rewards. So, the training process usually involves lots and lot of reply of the game, the robot simulator traversing a virtual space, etc., so the agent can learn from repeated trials what decisions/actions work best to maximal the long-term reward."
+    "In RL, one or more **agents** interact with an **environment** to maximize a **reward**. The agents make **observations** about the **state** of the environment and take **actions** that are believed will maximize the long-term reward. However, at any particular moment, the agents can only observe the immediate reward. So, the training process usually involves lots and lot of replay of the game, the robot simulator traversing a virtual space, etc., so the agents can learn from repeated trials what decisions/actions work best to maximize the long-term, cummulative reward.\n",
+    "\n",
+    "A key challenge in RL is the **exploitation vs. exploration tradeoff**. When an agent finds what appears to be a \"rewarding\" sequence of actions, the agent may naturally want to continue exploiting these actions. However, an ever better choice may exist. An agent won't know whether alternatives are better or not unless some percentage of actions taken explore the alternatives. So, all RL algorithms include the concept of exploitation vs. exploration, usually in the form of a tunable parameter that specifies the percentage of times when the action randomly explores an previously-unexplored actions. In most practical applications of RL, this percentage is usually much less than 50%, which means an agent will exploit known options more often than explore new ones."
    ]
   },
   {
@@ -464,7 +466,7 @@
    "source": [
     "## Proximal Policy Optimization\n",
     "\n",
-    "> **GOAL:** The goal of this section is to demonstrate how to use the proximal policy optimization (PPO) algorithm, a popular way to develop a policy. \n",
+    "> **GOAL:** The goal of this section is to demonstrate how to use the proximal policy optimization (PPO) algorithm, a popular way to develop a policy. RLlib also uses [Ray Tune](http://tune.io), the Ray Hyperparameter Tuning framework, is covered in the [Ray Tune Tutorial](../ray-tune/00-Ray-Tune-Overview.ipynb).\n",
     "\n",
     "We'll use **RLlib** this time with relatively little explanation for now, but explore it in greater depth in subsequent lessons. For more on RLlib, see the documentation at http://rllib.io."
    ]
