Changed the behavior of tools/start-ray.sh. It can't correctly start Ray inside a notebook.

--- a/ray-crash-course/04-Ray-Multiprocessing.ipynb
+++ b/ray-crash-course/04-Ray-Multiprocessing.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh"
+    "!../tools/start-ray.sh --check --verbose"
    ]
   },
   {
