--- a/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
+++ b/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh"
+    "!../tools/start-ray.sh --check --verbose"
    ]
   },
   {
