--- a/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
+++ b/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,12 @@
     "\n",
     "### Exercise 1\n",
     "\n",
-    "Finish implementing the `rollout_policy` function below, which should take an environment *and* a policy. The *policy* is a function that takes in a *state* and returns an *action*. The main difference is that instead of choosing a **random action**, the action should be chosen **with the policy** (as a function of the state)."
+    "Finish implementing the `rollout_policy` function below, which should take an environment *and* a policy. Recall that the *policy* is a function that takes in a *state* and returns an *action*. The main difference is that instead of choosing a **random action**, like we just did (with poor results), the action should be chosen **with the policy** (as a function of the state)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The first sample policy got an average reward of 9.48.\n",
-      "The second sample policy got an average reward of 29.7.\n"
+      "The first sample policy got an average reward of 9.31.\n",
+      "The second sample policy got an average reward of 29.52.\n"
      ]
     }
    ],
