New references "lesson", refinements to RLlib 00-02 lessons

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -172,6 +172,7 @@
     "| 04a | [Application: Mountain Car](ray-rllib/04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
     "| 04b | [Application: Taxi](ray-rllib/04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
     "| 04c | [Application: Frozen Lake](ray-rllib/04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
+    "| 06  | [RL References](06-RL-References.ipynb) | References on reinforcement learning. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
     "\n",
