--- a/ray-rllib/02-About-RLlib.ipynb
+++ b/ray-rllib/02-About-RLlib.ipynb
@@ -66,6 +66,12 @@
     "tune.run(PPOTrainer, config={\"env\": \"CartPole-v0\"})  # \"log_level\": \"INFO\" for verbose,\n",
     "                                                     # \"eager\": True for eager execution,\n",
     "                                                     # \"torch\": True for PyTorch\n",
+    "```\n",
+    "\n",
+    "You can view the training results, which are written to the directory `$HOME/ray_results` using TensorBoard:\n",
+    "\n",
+    "```shell\n",
+    "tensorboard --logdir=~/ray_results\n",
     "```"
    ]
   },
@@ -94,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from ray import tune\n",
@@ -104,6 +108,15 @@
     "tune.run(PPOTrainer, config={\"env\": \"CartPole-v0\"})  # \"log_level\": \"INFO\" for verbose,\n",
     "                                                     # \"eager\": True for eager execution,\n",
     "                                                     # \"torch\": True for PyTorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tensorboard --logdir=~/ray_results"
    ]
   },
   {
@@ -146,8 +159,13 @@
     "   't': np.ndarray((200,), dtype=int64, min=0.0, max=34.0, mean=9.14)}\n",
     "```\n",
     "\n",
-    "In [multi-agent mode](https://docs.ray.io/en/latest/rllib-concepts.html#policies-in-multi-agent), sample batches are collected separately for each individual policy.\n",
-    "\n",
+    "In [multi-agent mode](https://docs.ray.io/en/latest/rllib-concepts.html#policies-in-multi-agent), sample batches are collected separately for each individual policy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Training\n",
     "\n",
     "Policies each define a `learn_on_batch()` method that improves the policy given a sample batch of input. For TensorFlow and PyTorch policies, this is implemented using a _loss function_ that takes as input sample batch tensors and outputs a scalar loss value. Here are a few example loss functions:\n",
