Fixed Sutton and Barto URL

--- a/ray-rllib/06-RL-References.ipynb
+++ b/ray-rllib/06-RL-References.ipynb
@@ -21,11 +21,11 @@
     "\n",
     "Several books are available on RL:\n",
     "\n",
+    "* [*Reinforcement Learning: An Introduction*](https://mitpress.mit.edu/books/reinforcement-learning-second-edition), by Richard S. Sutton and Andrew G. Barto, MIT Press, 2018. This is the definitive textbook. Deep, but highly recommended. See this independent [repo of Python code](https://github.com/Pulkit-Khandelwal/Reinforcement-Learning-Notebooks).\n",
     "* [*Practical Reinforcement Learning*](https://www.endtoend.ai/practical-rl/), by Seungjae Ryan Lee.\n",
     "* [*Hands-On Reinforcement Learning with Python*](https://learning.oreilly.com/library/view/hands-on-reinforcement-learning/9781788836524/), by Sudharsan Ravichandiran, Packt, 2018.\n",
     "* [*Hands-On Reinforcement Learning for Games*](https://www.packtpub.com/game-development/hands-on-game-ai-with-python), by Micheal Lanham, Packt, 2020.\n",
-    "* [*Grokking Deep Reinforcement Learning*](https://www.manning.com/books/grokking-deep-reinforcement-learning), by Miguel Morales, Manning 2020 (preview). Deep RL means using deep learning as part of the training system.\n",
-    "* [*Reinforcement Learning: An Introduction*](http://incompleteideas.net/book/bookdraft2018jan1.pdf), by Richard S. Sutton and Andrew G. Barto, MIT Press, 2018. This is the definitive textbook. Deep, but highly recommended. See this independent [repo of Python code](https://github.com/Pulkit-Khandelwal/Reinforcement-Learning-Notebooks)."
+    "* [*Grokking Deep Reinforcement Learning*](https://www.manning.com/books/grokking-deep-reinforcement-learning), by Miguel Morales, Manning 2020 (preview). Deep RL means using deep learning as part of the training system."
    ]
   },
   {
