More consistent titles

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -167,7 +167,7 @@
     "| :-  | :-------------------------------------------------------- | :---------------------------------------- |\n",
     "| 00  | [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01  | [Introduction to Reinforcement Learning](ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning,  by @edoakes. You can skim or skip this lesson if you already understand RL concepts. |\n",
-    "| 02  | [About RLlib](ray-rllib/02-About-RLlib.ipynb) | An introduction to RLlib, its goals and the capabilities it provides. |\n",
+    "| 02  | [Introduction to RLlib](ray-rllib/02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
     "| 03  | [Application: Cart Pole](ray-rllib/03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
     "| 04a | [Application: Mountain Car](ray-rllib/04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
     "| 04b | [Application: Taxi](ray-rllib/04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
