--- a/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
+++ b/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploring Ray API Calls\n",
+    "# Ray Crash Course - Exploring Ray API Calls\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
