--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Reinforcement Learning\n",
+    "# Ray RLlib - Introduction to Reinforcement Learning\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
