--- a/ray-rllib/04b-Application-Taxi.ipynb
+++ b/ray-rllib/04b-Application-Taxi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RLlib Sample Application: Taxi-v3\n",
+    "# Ray RLlib - Sample Application: Taxi-v3\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
