--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -31,7 +31,7 @@
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Ray RLlib Overview](00-Ray-RLlib-Overview.iypnb) | Overview of this tutorial. |\n",
     "| 01  | [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
-    "| 02  | [About RLlib](02-About-RLlib.ipynb) | An introduction to RLlib, its goals and the capabilities it provides. |\n",
+    "| 02  | [Introduction to RLlib](ray-rllib/02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
     "| 03  | [Application: Cart Pole](03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
     "| 04a | [Application: Mountain Car](04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
     "| 04b | [Application: Taxi](04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
