--- a/ray-rllib/03-Application-Cart-Pole.ipynb
+++ b/ray-rllib/03-Application-Cart-Pole.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RLlib Sample Application: CartPole-v0\n",
+    "# Ray RLlib - Sample Application: CartPole-v0\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
