Saving work on first MAB lessons

--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is Reinforcement Learning?\n",
+    "## What Is Reinforcement Learning?\n",
     "\n",
     "> **GOAL:** The goal of the section is to introduce the basic concepts of RL, specifically the _Markov Decision Process_ abstraction, and to show its use in Python.\n",
     "\n",
