--- a/ray-rllib/04c-Application-Frozen-Lake.ipynb
+++ b/ray-rllib/04c-Application-Frozen-Lake.ipynb
@@ -272,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
